fix: adjust minimum Chrome version to 102 and optimize scrollbar CSS

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -4,13 +4,13 @@
 
 @layer utilities {
   .no-scrollbar {
-    /* 隐藏 Chrome, Safari 和 Opera 的滚动条 */
-    &::-webkit-scrollbar {
-      display: none;
-    }
     /* 隐藏 IE, Edge 和 Firefox 的滚动条 */
     -ms-overflow-style: none; /* IE 和 Edge */
     scrollbar-width: none; /* Firefox */
+  }
+  /* 隐藏 Chrome, Safari 和 Opera 的滚动条 */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
 }
 
